--- a/src/app/domains/about-us/about-us.component.html
+++ b/src/app/domains/about-us/about-us.component.html
@@ -27,10 +27,10 @@
             <h1 class="info-container__title">About Us</h1>
             <p>
                 Immerse yourself in a world of emotions and adventures with our company,
-                 where each experience becomes an unforgettable memory. From romantic getaways 
-                 in exotic locations to thrilling outdoor adventures, we're here to make your
-                  dreams come true and fill your life with unforgettable moments. Join us and 
-                  experience the adventure of a lifetime!</p>
+                where each experience becomes an unforgettable memory. From romantic getaways
+                in exotic locations to thrilling outdoor adventures, we're here to make your
+                dreams come true and fill your life with unforgettable moments. Join us and
+                experience the adventure of a lifetime!</p>
         </div>
         <div class="info__acordeon-container">
             <div class="info__acordeon">
@@ -38,10 +38,10 @@
                     <img src="assets/img/arrow-icon.svg" alt="arrow icon" class="arrow-icon">
                     <h3>The team</h3>
                 </div>
-                <div class="acordeon__content" [ngClass]="acordeonIndex === 0 ? ' show-content ' : ' '  " >
+                <div class="acordeon__content" [ngClass]="acordeonIndex === 0 ? ' show-content ' : ' '  ">
                     <p>Trekangle offers special activities, ranging from outdoor adventures to wine tastings.
-                         They make it easy to book and gift memorable experiences through their online platform, 
-                         collaborating with local providers to ensure quality and authenticity.</p>
+                        They make it easy to book and gift memorable experiences through our online platform,
+                        collaborating with local providers to ensure quality and authenticity.</p>
                 </div>
             </div>
 
@@ -51,23 +51,25 @@
                     <h3>Our values</h3>
                 </div>
                 <div class="acordeon__content" [ngClass]="acordeonIndex === 1 ? ' show-content ' : ' '  ">
-                    <p>Rekangle values creating memorable, high-quality, and authentic experiences. They focus on personalization 
-                        and collaborate with local providers to support community and sustainability. 
-                        Transparency, customer satisfaction, and innovation are central to their mission of bringing joy and connection
-                        through exceptional activities.</p>
+                    <p>At the core of our platform are values that guide every aspect of our operations. We are deeply
+                        committed to sustainability, prioritizing eco-friendly practices and promoting activities that
+                        protect and preserve the environment. Our focus on community means we actively support local
+                        guides and businesses, fostering meaningful connections that benefit both our users and the
+                        local populations. </p>
                 </div>
             </div>
 
             <div class="info__acordeon">
                 <div class="acordeon__title" (click)="toggleAcordeon(2)">
                     <img src="assets/img/arrow-icon.svg" alt="arrow icon" class="arrow-icon">
-                    <h3>Misión</h3>
+                    <h3>Mission</h3>
                 </div>
                 <div class="acordeon__content" [ngClass]="acordeonIndex === 2 ? ' show-content ' : ' '  ">
-                    <p>At Trekangle, we create unique and meaningful experiences that enrich our customers' lives. 
-                        We are committed to offering authentic, high-quality activities, collaborating with local suppliers
-                         to promote sustainability and support our communities. Our goal is to inspire memorable moments and
-                          deep connections, guided by transparency, customer satisfaction, and continuous innovation.</p>
+                    <p>Our mission is to create an accessible and user-friendly platform that allows individuals to
+                        discover and book unique and memorable outdoor adventures. We aim to promote ecotourism and
+                        sustainable travel by offering experiences that highlight the beauty and diversity of the
+                        world's most stunning landscapes. By connecting users with local guides and communities, we
+                        support environmental conservation and economic growth in the regions we operate.</p>
                 </div>
             </div>
 
@@ -76,12 +78,12 @@
                     <img src="assets/img/arrow-icon.svg" alt="arrow icon" class="arrow-icon">
                     <h3>Visión</h3>
                 </div>
-            <div class="acordeon__content" [ngClass]="acordeonIndex === 3 ? ' show-content ' : ' '  " >
-                    <p>Our vision at Trekangle is to become a leading provider of transformative experiences globally.
-                        We aspire to continuously innovate and expand our offerings, ensuring every customer encounter
-                        leaves a lasting positive impact. By fostering a culture of creativity, excellence, and community
-                        engagement, we aim to be recognized for our commitment to delivering unparalleled adventures that inspire
-                         and connect people worldwide.</p>
+                <div class="acordeon__content" [ngClass]="acordeonIndex === 3 ? ' show-content ' : ' '  ">
+                    <p>To become the premier platform that connects people with extraordinary travel adventures in
+                        breathtaking landscapes. We aim to inspire a global community to explore, appreciate, and
+                        respect the natural world through sustainable and unforgettable experiences. Lastly, our
+                        customer-centric approach drives us to provide exceptional service, ensuring every user has a
+                        memorable and positive experience with our platform.</p>
                 </div>
             </div>
         </div>
