Update README file with a new image

--- a/src/app/domains/user-settings/user-settings.component.html
+++ b/src/app/domains/user-settings/user-settings.component.html
@@ -157,7 +157,7 @@
             <article class="user-settings__card" *ngIf="editUserName">
 
                 <div class="card__info">
-                    <p class="card__title">Email:</p>
+                    <p class="info__title">Email:</p>
                     <p class="info__value">{{ user().email }}</p>
                 </div>
                 <div class="card__right-container">
