--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -4,16 +4,6 @@
     </div>
     <div class="experience__card__details">
         <h2 class="experience__card__title">{{title}}</h2>
-        <h3 class="experience__card__price">{{price | currency}}</h3>
-    </div>
-    <div class="experience__card__features">
-        <div class="experience__card__feature">
-            <span class="experience__card__icon">⭐</span>
-            <span class="experience__card__text">5.0</span>
-        </div>
-        <div class="experience__card__feature">
-            <span class="experience__card__icon">🚩</span>
-            <span class="experience__card__text">{{place}}</span>
-        </div>
+        <h3 class="experience__card__place">{{place}} <span><img src="assets/img/location-icon.svg" alt="Location Icon"></span></h3>
     </div>
 </article>
