--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -5,7 +5,7 @@
   top: 0;
   width: 100%;
   z-index: 100;
-  border-bottom: solid 3px black;
+  box-shadow: 0 8px 20px -2px rgb(0, 0, 0);
 }
 
 .navbar-buttons__desktop {
