--- a/src/app/components/mobile-top-experience/mobile-top-experience.component.css
+++ b/src/app/components/mobile-top-experience/mobile-top-experience.component.css
@@ -40,11 +40,15 @@
   margin-bottom: 0.5rem;
 }
 
-.mobile-experience__card__price {
-  font-size: 1.5rem;
-  margin-bottom: 0.5rem;
-  color: rgb(255, 255, 255);
-  -webkit-text-stroke: 1px black;
+.mobile-experience__card__place {
+  font-size: .9rem;
+  color: rgb(0, 0, 0);
+  margin-top: .2rem;
+  font-family: var(--arvo-subtitle-font);
+}
+
+.mobile-experience__card__place span img {
+  max-width: .8rem;
 }
 
 .mobile-experience__card__features {
